--- a/styles/SideBar/SideBar.module.scss
+++ b/styles/SideBar/SideBar.module.scss
@@ -8,7 +8,7 @@
 }
 
 // Size of the scrollbar
-.scollbarContainer{
+.scrollbarContainer{
     flex-grow: 1;
     padding-bottom: 15px;
 }
